--- a/GradingSystem/MainWindow.xaml
+++ b/GradingSystem/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Height="720" Width="1200"
         WindowStartupLocation="CenterScreen" 
-        WindowStyle="None" Background="{x:Null}" AllowsTransparency="True">
+        WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
 
     <Window.Resources>
         <Style TargetType="materialDesign:PackIcon">
