--- a/GradingSystem/View/Dashboard.xaml
+++ b/GradingSystem/View/Dashboard.xaml
@@ -1,12 +1,188 @@
 ﻿<UserControl x:Class="GradingSystem.View.Dashboard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:GradingSystem.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:wpfAnimatedGif="http://wpfanimatedgif.codeplex.com" 
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             mc:Ignorable="d"
+             d:DesignHeight="700" d:DesignWidth="1106.25" MouseDown="UserControl_MouseDown">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+
+        <!-- Header Section with Buttons -->
+        <Grid Grid.Row="0" Margin="20 20 0 0">
+            <Grid HorizontalAlignment="Right">
+                <StackPanel Margin="0 0 20 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
+                    <!-- Minimize Button -->
+                    <Button Style="{StaticResource MaterialDesignIconButton}" x:Name="MinimizeButton" Content="{materialDesign:PackIcon Kind=Minimize}" Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Minimize"/>
+                    <!-- Maximize Button -->
+                    <Button Style="{StaticResource MaterialDesignIconButton}" x:Name="MaximizeButton" Content="{materialDesign:PackIcon Kind=Maximize}" Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Maximize"/>
+                    <!-- Close Button -->
+                    <Button Style="{StaticResource MaterialDesignIconButton}" x:Name="CloseButton" Content="{materialDesign:PackIcon Kind=Close}" Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Close"/>
+                </StackPanel>
+            </Grid>
+        </Grid>
+
+        <!-- Dashboard Title -->
+        <Grid Grid.Row="1" Margin="30 0 0 0">
+            <TextBlock Text="Dashboard" 
+                       FontSize="35"
+                       Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+                       VerticalAlignment="Center"/>
+        </Grid>
+
+        <!-- Cards Section -->
+        <Grid Grid.Row="2" Height="200" Margin="20 0 20 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- Card 1 -->
+            <Grid Grid.Column="0" Margin="10 0 0 0" Height="130">
+                <materialDesign:Card Padding="20 10 20 10" UniformCornerRadius="10" Height="auto">
+                    <StackPanel>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Grid Grid.Column="0">
+                                <Image Width="200" Height="100" HorizontalAlignment="Center">
+                                    <wpfAnimatedGif:ImageBehavior.AnimatedSource>
+                                        <BitmapImage UriSource="../Resources/lecturer.gif"/>
+                                    </wpfAnimatedGif:ImageBehavior.AnimatedSource>
+                                </Image>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <TextBlock FontFamily="{StaticResource MaterialDesignFont}" FontWeight="Bold" HorizontalAlignment="Right" FontSize="50" Style="{StaticResource MaterialDesignCaptionTextBlock}">
+                                    100
+                                </TextBlock>
+                                <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Right" FontFamily="{StaticResource MaterialDesignFont}" FontSize="20" Style="{StaticResource MaterialDesignCaptionTextBlock}">Professor</TextBlock>
+                            </Grid>
+                        </Grid>
+                    </StackPanel>
+                </materialDesign:Card>
+            </Grid>
+
+            <!-- Card 2 -->
+            <Grid Grid.Column="1" Margin="10 0 0 0" Height="130">
+                <materialDesign:Card Padding="20 10 20 10" UniformCornerRadius="10" Height="auto">
+                    <StackPanel>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Grid Grid.Column="0">
+                                <Image Width="200" Height="100" HorizontalAlignment="Center">
+                                    <wpfAnimatedGif:ImageBehavior.AnimatedSource>
+                                        <BitmapImage UriSource="../Resources/student.gif"/>
+                                    </wpfAnimatedGif:ImageBehavior.AnimatedSource>
+                                </Image>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <TextBlock FontFamily="{StaticResource MaterialDesignFont}" FontWeight="Bold" HorizontalAlignment="Right" FontSize="50" Style="{StaticResource MaterialDesignCaptionTextBlock}">
+                                    100
+                                </TextBlock>
+                                <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Right" FontFamily="{StaticResource MaterialDesignFont}" FontSize="20" Style="{StaticResource MaterialDesignCaptionTextBlock}">Professor</TextBlock>
+                            </Grid>
+                        </Grid>
+                    </StackPanel>
+                </materialDesign:Card>
+            </Grid>
+
+            <!-- Card 3 -->
+            <Grid Grid.Column="2" Margin="10 0 0 0" Height="130">
+                <materialDesign:Card Padding="20 10 20 10" UniformCornerRadius="10" Height="auto">
+                    <StackPanel>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Grid Grid.Column="0">
+                                <Image Width="200" Height="100" HorizontalAlignment="Center">
+                                    <wpfAnimatedGif:ImageBehavior.AnimatedSource>
+                                        <BitmapImage UriSource="../Resources/leadership.gif"/>
+                                    </wpfAnimatedGif:ImageBehavior.AnimatedSource>
+                                </Image>
+                            </Grid>
+                            <Grid Grid.Column="1">
+                                <TextBlock FontFamily="{StaticResource MaterialDesignFont}" FontWeight="Bold" HorizontalAlignment="Right" FontSize="50" Style="{StaticResource MaterialDesignCaptionTextBlock}">
+                                    100
+                                </TextBlock>
+                                <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Right" FontFamily="{StaticResource MaterialDesignFont}" FontSize="20" Style="{StaticResource MaterialDesignCaptionTextBlock}">Professor</TextBlock>
+                            </Grid>
+                        </Grid>
+                    </StackPanel>
+                </materialDesign:Card>
+            </Grid>
+        </Grid>
+        <!-- Additional Content Section -->
+        <Grid Margin="20 0 10 20" MinHeight="350" MaxHeight="500" Grid.Row="3">
+            <Grid.ColumnDefinitions>
+                <!-- Use * to distribute space equally between columns -->
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+
+            <!-- First Card -->
+            <Grid Grid.Column="0" Margin="0">
+                <materialDesign:Card Margin="0" Height="350" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+                    <StackPanel>
+                        <TextBlock Margin="10 10 0 0" Style="{StaticResource MaterialDesignHeadline4TextBlock}">Student Overview</TextBlock>
+
+                        <!-- LiveChart Control -->
+                        <lvc:CartesianChart x:Name="StudentOverviewChart" Height="270" Margin="10">
+                            <lvc:CartesianChart.Series>
+                                <!-- Sample LineSeries -->
+                                <lvc:LineSeries Values="{Binding ChartValues}" Fill="Transparent" Stroke="SkyBlue" StrokeThickness="3">
+                                </lvc:LineSeries>
+                            </lvc:CartesianChart.Series>
+
+                            <!-- X and Y Axis definitions -->
+                            <lvc:CartesianChart.AxisX>
+                                <lvc:Axis Title="Time" Labels="{Binding TimeLabels}"/>
+                            </lvc:CartesianChart.AxisX>
+                            <lvc:CartesianChart.AxisY>
+                                <lvc:Axis Title="Students Count" MinValue="0" MaxValue="100"/>
+                            </lvc:CartesianChart.AxisY>
+                        </lvc:CartesianChart>
+                    </StackPanel>
+                </materialDesign:Card>
+            </Grid>
+
+            <!-- Second Card -->
+            <Grid Grid.Column="1" Margin="20 0 0 0">
+                <materialDesign:Card Margin="0" Height="350" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <StackPanel>
+                                <Calendar HorizontalAlignment="Center" Height="300" Margin="20 20 20 0" Style="{StaticResource MaterialDesignDatePickerCalendarPortrait}"/>
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </materialDesign:Card>
+            </Grid>
+        </Grid>
     </Grid>
 </UserControl>
