--- a/GradingSystem/App.xaml
+++ b/GradingSystem/App.xaml
@@ -10,6 +10,48 @@
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="Green" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style x:Key="addButton" TargetType="Button">
+            <Setter Property="Background" Value="#118AB2"/>
+            <Setter Property="Foreground" Value="#ffff"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="120"/>
+
+            <Setter Property="Padding" Value="10,0"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="Margin" Value="15 3"/>
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" 
+                        CornerRadius="10" 
+                        BorderBrush="Transparent" 
+                        BorderThickness="1">
+                            <ContentPresenter VerticalAlignment="Center" 
+                                      HorizontalAlignment="Center"
+                                      ContentSource="Content"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#116AB2"/>
+                    <Setter Property="Foreground" Value="#ffffff"/>
+                </Trigger>
+            </Style.Triggers>
+            </Style>
+
+            <Style x:Key="addButtonIcon" TargetType="materialDesign:PackIcon">
+                <Setter Property="Margin" Value="5 2 5 0" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="Width" Value="10" />
+                <Setter Property="Height" Value="10" />
+            </Style>
+
         </ResourceDictionary>
+
     </Application.Resources>
 </Application>
