--- a/GradingSystem/MainWindow.xaml
+++ b/GradingSystem/MainWindow.xaml
@@ -40,7 +40,7 @@
                         
                         <ListViewItem HorizontalAlignment="Center" Margin="0 0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
-            HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="ProfessorBtn">
+            HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="managestudentBtn">
                                 <StackPanel Margin="-5">
                                     <materialDesign:PackIcon Kind="AccountStudentOutline" Foreground="White"/>
                                 </StackPanel>
@@ -105,8 +105,8 @@ HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foregrou
                         </Grid>
                     </Grid>
                     
-                    <Grid Grid.Row="1">
-                        <ContentControl x:Name="MainContent" Height="640" Margin="0 0 0 0" Padding="0 0 0 0"/>
+                    <Grid Grid.Row="1" Margin="20 20 20 20">
+                        <ContentControl x:Name="MainContent" Height="600" Margin="0 0 0 0" Padding="0 0 0 0"/>
                     </Grid>
                 </Grid>
             </Grid>
