--- a/GradingSystem/View/Admin/Dashboard.xaml
+++ b/GradingSystem/View/Admin/Dashboard.xaml
@@ -8,7 +8,7 @@
              xmlns:wpfAnimatedGif="http://wpfanimatedgif.codeplex.com" 
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d"
-             d:DesignHeight="700" d:DesignWidth="1106.25" MouseDown="UserControl_MouseDown">
+             d:DesignHeight="600" d:DesignWidth="1106.25">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -117,7 +117,7 @@
 
             <!-- First Card -->
             <Grid Grid.Column="0" Margin="0">
-                <materialDesign:Card Margin="0" Height="350" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+                <materialDesign:Card Margin="0" Height="340" HorizontalAlignment="Stretch" VerticalAlignment="Top">
                     <StackPanel>
                         <TextBlock Margin="10 10 0 0" Style="{StaticResource MaterialDesignHeadline4TextBlock}">Student Overview</TextBlock>
 
@@ -143,7 +143,7 @@
 
             <!-- Second Card -->
             <Grid Grid.Column="1" Margin="20 0 0 0">
-                <materialDesign:Card Margin="0" Height="350" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+                <materialDesign:Card Margin="0" Height="340" HorizontalAlignment="Stretch" VerticalAlignment="Top">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto"/>
