--- a/GradingSystem/View/Admin/ManageStudents.xaml
+++ b/GradingSystem/View/Admin/ManageStudents.xaml
@@ -22,60 +22,90 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <materialDesign:Card Background="White" Height="600">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
+            <Border Background="Black" Margin="10 10 10 10" CornerRadius="4">
+                <materialDesign:Card Background="White" Height="500">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
 
-                    <Grid Grid.Row="0" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                        <materialDesign:Card>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-
-                                <Grid Grid.Column="0" Margin="20 0 0 0">
-                                    <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}">
-                                        Export
-                                    </Button>
-                                </Grid>
-
-                                <Grid Grid.Column="1">
+                        <Grid Grid.Row="0" Effect="{StaticResource MaterialDesignElevationShadow1}">
+                            <materialDesign:Card>
+                                <Grid>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto"/>
-                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <Grid Grid.Column="0">
-                                        <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"
-                                                 Height="40">
-                                        </TextBox>
-                                    </Grid>
-                                    <Grid Grid.Column="1">
-                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100">
-
-                                            <StackPanel>
-                                                <materialDesign:PackIcon Kind="Add" Height="20"/>
-                                            </StackPanel>
+                                    <Grid Grid.Column="0" Margin="20 0 0 0">
+                                        <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}">
+                                            Export
                                         </Button>
                                     </Grid>
+
+                                    <Grid Grid.Column="1">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <Grid Grid.Column="0">
+                                            <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"
+                                     Height="40">
+                                            </TextBox>
+                                        </Grid>
+                                        <Grid Grid.Column="1">
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="addStudentBtn">
+                                                <StackPanel>
+                                                    <materialDesign:PackIcon Kind="Add" Height="20"/>
+                                                </StackPanel>
+                                            </Button>
+                                        </Grid>
+                                    </Grid>
                                 </Grid>
-                            </Grid>
-                        </materialDesign:Card>
+                            </materialDesign:Card>
+                        </Grid>
+
+                        <Grid Grid.Row="1" Height="auto">
+                            <DataGrid RowStyle="{StaticResource MaterialDesignDataGridRow}" 
+                      ColumnHeaderStyle="{StaticResource MaterialDesignDataGridColumnHeader}" 
+                      CellStyle="{StaticResource MaterialDesignDataGridCell}" 
+                      x:Name="studentsDataGrid" Style="{StaticResource MaterialDesignDataGrid}"
+                      CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Students}" AutoGenerateColumns="False">
+
+                                <DataGrid.Columns>
+
+                                    <DataGridTextColumn Header="StudentID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding StudentId}"/>
+                                    <DataGridTextColumn Header="Firstname" CanUserResize="False" Binding="{Binding FirstName}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Lastname" CanUserResize="False" Binding="{Binding LastName}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Course" CanUserResize="False" Binding="{Binding Course}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Year Level" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt}" IsReadOnly="True" Width="*"/>
+
+                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Button Style="{StaticResource gridEditButton}">
+                                                        <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
+                                                    </Button>
+                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}">
+                                                        <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
+                                                    </Button>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+
+                                </DataGrid.Columns>
+
+                            </DataGrid>
+                        </Grid>
+
                     </Grid>
-
-                    <Grid Grid.Row="1">
-                        <DataGrid>
-
-                        </DataGrid>
-                    </Grid>
-
-                </Grid>
-            </materialDesign:Card>
+                </materialDesign:Card>
+            </Border>
         </Grid>
-        
     </Grid>
 </UserControl>
