added login/forgot/change password functionality

--- a/GradingSystem/View/Admin/ManageUser.xaml
+++ b/GradingSystem/View/Admin/ManageUser.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl x:Class="GradingSystem.View.Admin.ManageGrades"
+﻿<UserControl x:Class="GradingSystem.View.Admin.ManageUser"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GradingSystem.View.Admin"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModel="clr-namespace:GradingSystem.ViewModel"
+             xmlns:local="clr-namespace:GradingSystem.View.Admin"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1106.25">
     <UserControl.DataContext>
-        <!-- Set the DataContext to the GradeViewModel -->
-        <viewModel:GradeViewModel />
+        <!-- Set the DataContext to the StudentsViewModel -->
+        <viewModel:UserViewModel/>
     </UserControl.DataContext>
 
     <Grid>
@@ -21,7 +21,7 @@
 
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
-            <TextBlock Text="Manage Grades" 
+            <TextBlock Text="Manage User" 
            FontSize="35"
            Style="{StaticResource MaterialDesignCaptionTextBlock}" 
            VerticalAlignment="Center"/>
@@ -57,8 +57,8 @@
                                         </Grid.ColumnDefinitions>
 
                                         <Grid Grid.Column="0">
-                                            <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"
-                                 Height="40">
+                                            <TextBox Style="{StaticResource searchBoxes}" Width="200"
+                                 Height="30">
                                             </TextBox>
                                         </Grid>
                                         <Grid Grid.Column="1">
@@ -75,7 +75,7 @@
 
                         <Grid Grid.Row="1" Height="auto">
                             <DataGrid x:Name="studentsDataGrid"
-                  CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Grades}"
+                  CanUserSortColumns="False" CanUserReorderColumns="False" ItemsSource="{Binding Users}"
                                   AutoGenerateColumns="False" SelectionMode="Single">
 
                                 <!-- Define RowStyle to set background for all rows -->
@@ -87,10 +87,10 @@
 
                                 <DataGrid.Columns>
 
-                                    <DataGridTextColumn Header="UserID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding GradeId}"/>
-                                    <DataGridTextColumn Header="StudentName" CanUserResize="False" Binding="{Binding FirstName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Course" CanUserResize="False" Binding="{Binding Course}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="DateSubmitted" CanUserResize="False" Binding="{Binding DateSubmitted, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="UserID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding StudentId}"/>
+                                    <DataGridTextColumn Header="Name" CanUserResize="False" Binding="{Binding FullName}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Email" CanUserResize="False" Binding="{Binding Email}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Username" CanUserResize="False" Binding="{Binding Username}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
                                     <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
@@ -107,6 +107,7 @@
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
+
                                 </DataGrid.Columns>
 
                             </DataGrid>
