fix populate errors

--- a/GradingSystem/ChangePassword.xaml
+++ b/GradingSystem/ChangePassword.xaml
@@ -51,17 +51,18 @@
                                 </Grid.ColumnDefinitions>
 
                                 <StackPanel>
-                                    <!-- TextBox with placeholder -->
-                                    <TextBox x:Name="passTxt" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                                          Margin="0 10 0 10" Height="50" Width="300" FontSize="20"
-                                          Grid.Column="0">
+
+                                    <PasswordBox x:Name="passTxt" MaxLength="20" Style="{StaticResource MaterialDesignFloatingHintRevealPasswordBox}" 
+                                                 Margin="0 10 0 10" Height="50" Width="300" FontSize="20" 
+                                                 Grid.Column="0">
+                                        <!-- HintAssist for watermark functionality -->
                                         <materialDesign:HintAssist.Hint>
                                             <StackPanel Orientation="Horizontal">
-                                                <materialDesign:PackIcon Kind="Lock" Height="20" Width="20" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                                                <materialDesign:PackIcon Height="20" Width="20" Kind="Key" VerticalAlignment="Center" Margin="0 0 10 0"/>
                                                 <TextBlock Text="New Password" VerticalAlignment="Center"/>
                                             </StackPanel>
                                         </materialDesign:HintAssist.Hint>
-                                    </TextBox>
+                                    </PasswordBox>
                                 </StackPanel>
                             </Grid>
 
@@ -72,16 +73,17 @@
 
                                 <StackPanel>
                                     <!-- TextBox with placeholder -->
-                                    <TextBox x:Name="confirmTxt" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-          Margin="0 10 0 10" Height="50" Width="300" FontSize="20"
-          Grid.Column="0">
+                                    <PasswordBox x:Name="confirmTxt" MaxLength="20" Style="{StaticResource MaterialDesignFloatingHintRevealPasswordBox}" 
+             Margin="0 10 0 10" Height="50" Width="300" FontSize="20" 
+             Grid.Column="0">
+                                        <!-- HintAssist for watermark functionality -->
                                         <materialDesign:HintAssist.Hint>
                                             <StackPanel Orientation="Horizontal">
-                                                <materialDesign:PackIcon Kind="LockCheck" Height="20" Width="20" VerticalAlignment="Center" Margin="0,0,10,0"/>
-                                                <TextBlock Text="Conifrm Password" VerticalAlignment="Center"/>
+                                                <materialDesign:PackIcon Height="20" Width="20" Kind="Key" VerticalAlignment="Center" Margin="0 0 10 0"/>
+                                                <TextBlock Text="New Password" VerticalAlignment="Center"/>
                                             </StackPanel>
                                         </materialDesign:HintAssist.Hint>
-                                    </TextBox>
+                                    </PasswordBox>
 
                                     <Button Grid.Column="0" HorizontalContentAlignment="Center" Style="{StaticResource MaterialDesignFlatDarkBgButton}"
          Width="300" Height="40" Click="submitBtn">Submit</Button>
