--- a/GradingSystem/Login.xaml
+++ b/GradingSystem/Login.xaml
@@ -51,9 +51,9 @@
                                 </Grid.ColumnDefinitions>
 
                                 <!-- TextBox with placeholder -->
-                                <TextBox x:Name="emailTxt" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                                <TextBox x:Name="emailTxt" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                          Margin="0 10" Height="50" Width="300" FontSize="20"
-                         Grid.Column="0">
+                         Grid.Column="0" MaxLength="40" KeyDown="TextBox_KeyDown">
                                     <materialDesign:HintAssist.Hint>
                                         <StackPanel Orientation="Horizontal">
                                             <materialDesign:PackIcon Kind="At" Height="20" Width="20" VerticalAlignment="Center" Margin="0,0,10,0"/>
@@ -69,9 +69,9 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <PasswordBox x:Name="passwordTxt" Style="{StaticResource MaterialDesignFloatingHintRevealPasswordBox}" 
-             Margin="0 10" Height="50" Width="300" FontSize="20" 
-             Grid.Column="0" PasswordChanged="PasswordBox_PasswordChanged">
+                                <PasswordBox x:Name="passwordTxt" MaxLength="20" Style="{StaticResource MaterialDesignFloatingHintRevealPasswordBox}" 
+             Margin="0 20" Height="50" Width="300" FontSize="20" 
+             Grid.Column="0" PasswordChanged="PasswordBox_PasswordChanged" KeyDown="TextBox_KeyDown">
                                     <!-- HintAssist for watermark functionality -->
                                     <materialDesign:HintAssist.Hint>
                                         <StackPanel Orientation="Horizontal">
@@ -86,7 +86,7 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <Button Grid.Column="0" HorizontalContentAlignment="Center" Style="{StaticResource MaterialDesignFlatDarkBgButton}"
-                                        Width="300" Height="40" Command="{Binding LoginCommand}" Click="loginBtn">Log In</Button>
+                                        Width="300" Height="40" Click="loginBtn">Log In</Button>
                             </Grid>
                             <Grid>
                                 <Grid.ColumnDefinitions>
