--- a/GradingSystem/View/Admin/EditStudent.xaml
+++ b/GradingSystem/View/Admin/EditStudent.xaml
@@ -1,14 +1,13 @@
-﻿<Window x:Class="GradingSystem.View.Admin.AddStudent"
+﻿<Window x:Class="GradingSystem.View.Admin.EditStudent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GradingSystem.View.Admin"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen" Height="260" Width="670"
+        mc:Ignorable="d" Title="Edit Student"
+        WindowStartupLocation="CenterScreen" Width="670" Height="260"
         WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
-
     <Grid>
         <Border Background="Black" Margin="05 05 05 05" CornerRadius="4">
             <materialDesign:Card Effect="{StaticResource MaterialDesignElevationShadow1}">
@@ -21,13 +20,13 @@
 
                     <Grid Grid.Row="0" Background="Green">
                         <Grid HorizontalAlignment="Left">
-                            <TextBlock Text="Add Students" Margin="10 0 0 0" 
-                                       FontSize="15"
-                                       Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-                                       VerticalAlignment="Center"/>
+                            <TextBlock Text="Edit Students" Margin="10 0 0 0" 
+                                    FontSize="15"
+                                    Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+                                    VerticalAlignment="Center"/>
                         </Grid>
                         <Grid HorizontalAlignment="Right">
-                            <StackPanel Margin="0 0 0 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
+                            <StackPanel Margin="0 0 20 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                                 <Button Style="{StaticResource MaterialDesignIconButton}" x:Name="CloseButton" Content="{materialDesign:PackIcon Kind=WindowClose}" Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Close"/>
                             </StackPanel>
                         </Grid>
@@ -45,9 +44,9 @@
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <TextBox x:Name="FnameTxt" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                         Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
-                         Grid.Column="0" MaxLength="20">
+                            <TextBox x:Name="FnameTxt" Text="{Binding SelectedStudent.FirstName}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                      Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
+                      Grid.Column="0" MaxLength="20">
                                 <materialDesign:HintAssist.Hint>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="First Name" VerticalAlignment="Center"/>
@@ -55,9 +54,9 @@
                                 </materialDesign:HintAssist.Hint>
                             </TextBox>
 
-                            <TextBox x:Name="LnameTxt"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                         Margin="0 10 0 20" Height="50" Width="300" FontSize="20"
-                         Grid.Column="1" MaxLength="20">
+                            <TextBox x:Name="LnameTxt"  Text="{Binding SelectedStudent.LastName}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                      Margin="0 10 20 20" Height="50" Width="300" FontSize="20"
+                      Grid.Column="1" MaxLength="20">
                                 <materialDesign:HintAssist.Hint>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Last Name" VerticalAlignment="Center"/>
@@ -73,9 +72,9 @@
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
 
-                            <ComboBox x:Name="courseCmb"  Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                          Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
-                          Grid.Column="0" SelectedValuePath="Content">
+                            <ComboBox x:Name="courseCmb" Text="{Binding SelectedStudent.Course}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                       Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
+                       Grid.Column="0" SelectedValuePath="Content">
                                 <materialDesign:HintAssist.Hint>
                                     Course
                                 </materialDesign:HintAssist.Hint>
@@ -85,9 +84,9 @@
                                 <ComboBoxItem>BSHM</ComboBoxItem>
                             </ComboBox>
 
-                            <ComboBox x:Name="yearCmb" Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                          Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
-                          Grid.Column="1" SelectedValuePath="Content">
+                            <ComboBox x:Name="yearCmb" Text="{Binding SelectedStudent.YearLevel}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                       Margin="0,10,20,0" Height="50" Width="300" FontSize="20"
+                       Grid.Column="1" SelectedValuePath="Content">
                                 <materialDesign:HintAssist.Hint>
                                     YearLevel
                                 </materialDesign:HintAssist.Hint>
@@ -101,7 +100,7 @@
                     </Grid>
                     <Grid Grid.Row="2" Margin="10 0 10 10">
                         <Grid>
-                            <Button Style="{StaticResource   MaterialDesignFlatDarkBgButton}" Click="addStudentBtn">SAVE</Button>
+                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Click="saveBtn">SAVE</Button>
                         </Grid>
                     </Grid>
                 </Grid>
